# DX12-PCV

./: .gitignore  CMakeLists.txt  CMakePresets.json  PointCloudRenderer.cpp  PointCloudRenderer.h  PointCloudViewer.cpp  README.md  Window.cpp  debug.h  primitives.h
shaders/: fragmentShader.hlsl  vertexShader.hlsl
